bug: language toggle aligning

--- a/src/pages/InnerContainer/AppHead/AppHead.scss
+++ b/src/pages/InnerContainer/AppHead/AppHead.scss
@@ -161,3 +161,7 @@
 .animateLoader {
   opacity: 1;
 }
+
+.spaceFiller {
+  flex-grow: 1;
+}
